# LLM-Chatbot

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  readme.md
api/: .env.example  pyproject.toml  requirements.txt
api/src/eng/: app.py  model.py
api/src/eng/data/: models.json
api/src/eng/models/: chat.py  model.py
api/src/eng/routers/: chat.py
scripts/: dev.sh
web/: app.py
