[tool.poetry]
name = "llm chatbot"
version = "0.0.1"
description = ""
authors = ["Keshav Mishra <keshav.mishra0298@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.11"
langchain = "^0.0.228"
python-dotenv = "^1.0.0"
transformers = "^4.30.2"
torch = "^2.0.1"
fastapi = "^0.100.0"
huggingface-hub = "^0.14.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
